changed getFirst()